--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -87,4 +87,28 @@
 		app:layout_constraintEnd_toEndOf="parent"
 		app:layout_constraintStart_toStartOf="parent"
 		app:layout_constraintTop_toTopOf="parent" />
+
+	<Button
+		android:id="@+id/btnCheckBell0"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginStart="8dp"
+		android:text="Check bell 0"
+		android:textAllCaps="false"
+		android:textSize="18sp"
+		app:layout_constraintBottom_toBottomOf="@+id/btnCheckBell1"
+		app:layout_constraintStart_toStartOf="parent"
+		app:layout_constraintTop_toTopOf="@+id/btnCheckBell1" />
+
+	<Button
+		android:id="@+id/btnCheckBell1"
+		android:layout_width="wrap_content"
+		android:layout_height="wrap_content"
+		android:layout_marginTop="32dp"
+		android:layout_marginEnd="8dp"
+		android:text="Check bell 1"
+		android:textAllCaps="false"
+		android:textSize="18sp"
+		app:layout_constraintEnd_toEndOf="parent"
+		app:layout_constraintTop_toBottomOf="@+id/cbHalfHour" />
 </androidx.constraintlayout.widget.ConstraintLayout>
